--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ AddDefaultCharset utf-8
 
 #Options +FollowSymlinks
 RewriteEngine On
-RewriteBase /
+RewriteBase /modxevo3
 
 # Fix Apache internal dummy connections from breaking [(site_url)] cache
 RewriteCond %{HTTP_USER_AGENT} ^.*internal\ dummy\ connection.*$ [NC]
